kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-deployment
spec:
  selector:
    matchLabels:
      app: otus-app
  replicas: 2
  template:
      metadata:
        labels:
            app: otus-app
      spec:
        containers:
        - name: otus-app
          image: 30russian/otus
          readinessProbe:
            httpGet:
              port: otus-app-web
              path: /health
          ports:
            - name: otus-app-web
              containerPort: 8000
